WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281770
REGRESSION(
285368@main
): [iOS17] 2 TestWebKitAPI tests are constant crash (failure in EWS)
https://bugs.webkit.org/show_bug.cgi?id=281770
Summary
REGRESSION(285368@main): [iOS17] 2 TestWebKitAPI tests are constant crash (fa...
Marta Darbinyan
Reported
2024-10-18 12:37:09 PDT
The following API tests are constant crashing on iOS17 F queue starting from
285368@main
. This is also a positive failure failure in EWS. TestWebKitAPI.DocumentOrder.Positions TestWebKitAPI.WebCoreHTMLParser.HTMLInputElementCheckedState Output logs: TestWebKitAPI.DocumentOrder.Positions Child process terminated with signal 5: Trace/BPT trap TestWebKitAPI.WebCoreHTMLParser.HTMLInputElementCheckedState Child process terminated with signal 5: Trace/BPT trap History:
https://results.webkit.org/?recent=false&suite=api-tests&suite=api-tests&test=TestWebKitAPI.DocumentOrder.Positions&test=TestWebKitAPI.WebCoreHTMLParser.HTMLInputElementCheckedState&version_name=iOS%2017
Test Results:
https://build.webkit.org/#/builders/927/builds/3293
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-18 12:37:27 PDT
<
rdar://problem/138203988
>
Matthew Finkel
Comment 2
2024-10-18 13:33:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35451
EWS
Comment 3
2024-10-20 18:40:03 PDT
Committed
285495@main
(00e9cca4cf48): <
https://commits.webkit.org/285495@main
> Reviewed commits have been landed. Closing PR #35451 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug