REGRESSION(285368@main): [iOS17] 2 TestWebKitAPI tests are constant crash (failure in EWS) https://bugs.webkit.org/show_bug.cgi?id=281770 rdar://138203988

Reviewed by Wenson Hsieh.

We need to be careful about accessing VM state while the VM is being
initialized. Our telemetry collection now creates a VM where it wasn't needed
before. This patch avoids that issue by aborting telemetry collection if we
don't already have a vm.

Covered by existing crashing tests.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::vmIfExists):
* Source/WebCore/dom/Document.h:
* Source/WebCore/dom/EmptyScriptExecutionContext.h:
* Source/WebCore/dom/ScriptExecutionContext.cpp:
(WebCore::ScriptExecutionContext::requiresScriptExecutionTelemetry):
* Source/WebCore/dom/ScriptExecutionContext.h:
* Source/WebCore/workers/WorkerOrWorkletGlobalScope.cpp:
(WebCore::WorkerOrWorkletGlobalScope::vmIfExists):
* Source/WebCore/workers/WorkerOrWorkletGlobalScope.h:

Canonical link: https://commits.webkit.org/285495@main